front page of linkage without cascade. todo: get data from page

--- a/GenSys/Views/Home/Index.cshtml
+++ b/GenSys/Views/Home/Index.cshtml
@@ -87,7 +87,7 @@
             //在本函数内定义table变量，会提示不支持bootstrapTable方法
             $table.bootstrapTable('refresh', { url: '/Home/GetAlarm' });
         }
-        setInterval(myRefreshAlarm, 3000);
+        //setInterval(myRefreshAlarm, 3000);
 
     </script>
 }
