--- a/GenSys/Views/SystemConfig/Index.cshtml
+++ b/GenSys/Views/SystemConfig/Index.cshtml
@@ -103,6 +103,9 @@
                 <div>
                     <label for="PrtScPath" style="width:90px;height:25px;min-width:90px;">抓图路径</label>
                     <input type="text" name="PrtScPath" id="PrtScPath" size="18" style="width:300px" />
+                    
+                    
+                    
                 </div>
                 <div>
                     <label for="VideoPath" style="width:90px;height:25px;min-width:90px;">录像路径</label>
@@ -115,6 +118,7 @@
 
                 <br />
                 <div style="text-align:right">
+                    <input type="reset" style="width:100px;height:30px"/>
                     <button id="apply" type="submit" style="width:100px;height:30px">应用</button>
                 </div>
                 <br />
