--- a/GenSys/Views/Home/About.cshtml
+++ b/GenSys/Views/Home/About.cshtml
@@ -1,7 +1,79 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<head>
+    <title>H5STREAM VIDEO</title>
+    <script src="~/Scripts/jquery-3.1.1.js"></script>
+    <script src="~/Scripts/bootstrap.js"></script>
+    <script src="~/Scripts/adapter.js"></script>
+    <script src="~/Scripts/platform.js"></script>
+    <script src="~/Scripts/h5splayer.js"></script>
+    <script src="~/Scripts/h5splayerhelper.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="css/h5splayer.css" />
+
+</head>
+
+<div class="row">
+    
+    <div class="h5videodiv">
+        <video class="h5video" id="h5sVideo1" autoplay webkit-playsinline playsinline style="width:1000px"></video>
+        <div class="playpause" id="playpause1"></div>
+
+    </div>
+    
+</div>
+
+<script>
+
+if (H5siOS() === true
+	|| H5sSafariBrowser() === true)
+{
+	$('#h5sVideo1').prop("controls", true);
+}
+
+var conf1 = {
+	videoid:'h5sVideo1',
+	protocol: window.location.protocol, //'http:' or 'https:'
+	host: "localhost:8080", //'localhost:8080'
+	rootpath:'/', // '/' or window.location.pathname
+	token:'token1',
+	hlsver:'v1', //v1 is for ts, v2 is for fmp4
+	session: 'c1782caf-b670-42d8-ba90-2244d0b0ee83' //session got from login
+    
+};
+
+
+var v1 = H5sPlayerCreate(conf1);
+
+
+
+$('#h5sVideo1').parent().click(function () {
+    if($(this).children(".h5video").get(0).paused){
+		if(v1 != null)
+		{
+			v1.disconnect();
+			delete v1;
+			v1 = null;
+		}
+
+		v1 = H5sPlayerCreate(conf1);
+
+		console.log(v1);
+        v1.connect();
+
+        $(this).children(".playpause").fadeOut();
+    }else{
+		v1.disconnect();
+		delete v1;
+		v1 = null;
+		$(this).children(".h5video").get(0).pause();
+		$(this).children(".playpause").fadeIn();
+    }
+});
+
+
+
+</script>
+
